_source/stylus/index.styl
@require 'normalize-css/normalize.css'
@require 'flexboxgrid/css/flexboxgrid.css'
@import 'https://fonts.googleapis.com/css?family=Roboto:400,700'

$padding = 20px
$gray-dark = #333
$gray-bg = #8c8c8c
$gray-light= lighten($gray-dark, 80%)
$blue = #01adee
$border-width = 7px
$padding = 20px
$border-color = white

html, body
  padding: 0
  margin: 0
  background-color: $gray-bg
  font-family: 'Roboto', sans-serif

.about-container
  padding: $padding ($padding*4)

  img.client-logos
    max-height: 400px
    margin-bottom: ($padding*2)

  img.experience
    margin-bottom: ($padding*2)

  p, li
    font-size: 1.8em

  p
    margin-top: 0
    margin-bottom: ($padding*2)

  strong
    font-weight: 700

footer
  display: block
  overflow: auto
  // margin-top: 30px

  img.city
    width: 100%

  nav
    position: fixed
    bottom: 0
    width: 100%
    background-color: black
    text-align: center

    ul
      display: flex
      list-style: none
      align-items: center
      justify-content: center

      li
        display: flex-inline
        border-right: 1px solid white

        &:last-child
          border: 0

      img.logo
        height: 16px
        padding: 0 20px

      a
        padding: 0 20px
        color: white
        text-decoration: none

header
  background-color: $gray-bg
  text-align: center

  img.city
    width: 100%
    height: auto
    margin-top: -10px

  img.logo
    // margin-top: -15px
    max-width: 50%
    height: auto
    margin-bottom: 10px

.grid-container
  width: 100%
  box-sizing: border-box
  margin: 0
  border: $border-width solid $gray-bg

.grid-item
  background-image: url("../img/loader.svg")
  background-repeat: no-repeat
  background-position: center center
  margin: 0
  padding: 0
  background-color: $gray-bg
  overflow: hidden
  position: relative
  // height: 1em
  border: $border-width solid $gray-bg
  box-sizing: border-box

  img
    box-sizing: border-box
    border: 1px solid black

  .details
    position: absolute
    top: 100%
    left: 0
    width: 100%
    height: 100%
    background-color: rgba($gray-dark, 0.8)
    opacity: 0
    transition: all .3s ease-out
    transition-delay: .2s
    padding: $padding
    color: white
    box-sizing: border-box

    h2
      border-bottom: 1px solid $gray-light

    p
      font-size: 12px

  &:hover
    .details
      opacity: .7
      top: 0

  img
    display: block
    height: auto
    // opacity: 0
    width: 100%
    // border: 1px solid #ccc
    transition: all .4s ease-in
    // transition-delay: .2s

    // &.loaded
    //   opacity: 1

  img:not([src])
    visibility: hidden

  /* Fixes Firefox anomaly during image load */
  @-moz-document url-prefix()
    img:-moz-loading
      visibility: hidden


@media (max-width: 767px)
  header img.logo
    max-width: 80%

  .about-container
    padding: $padding
    p, li
      font-size: 1.5em

